# json2pyclass

./: .gitignore  README.md  pyproject.toml
src/json2pyclass/: code_generator.py  naming.py  structure_analyzer.py
src/json2pytype/: __init__.py  cli.py  code_generator.py  type_inference.py
tests/: __init__.py  test_code_generator.py  test_naming.py  test_structure_analyzer.py  test_type_inference.py
tests/fixtures/: nested.json  simple.json
