[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json2pytype"
version = "0.1.1"
authors = [
    { name = "yjkindex", email = "yangjingke@sjtu.edu.cn" }
]
description = "A tool to generate Python classes with type hints from JSON files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
json2pyclass = "json2pyclass.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=4.0",
    "black>=22.3.0",
]
